--- a/package.json
+++ b/package.json
@@ -1,11 +1,6 @@
 {
-<<<<<<< HEAD
-  "name": "archive-homepage",
-=======
-  "name": "archive-new",
->>>>>>> 63f9f19 (Initial commit from Create Next App)
-  "version": "0.1.0",
-  "private": true,
+  "name": "3000-surgery",
+  "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -13,34 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-<<<<<<< HEAD
-    "next": "15.4.5",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "next": "14.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "24.1.0",
-    "@types/react": "19.1.9",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.5",
-    "tailwindcss": "^4"
-=======
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.4.5"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.5",
-    "@eslint/eslintrc": "^3"
->>>>>>> 63f9f19 (Initial commit from Create Next App)
+    "eslint": "8.55.0",
+    "eslint-config-next": "14.1.0",
+    "typescript": "5.4.2"
   }
 }
