--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^24.1.0",
+    "@types/react": "^19.1.9",
     "eslint": "8.55.0",
     "eslint-config-next": "14.1.0",
     "typescript": "5.4.2"
