--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "devDependencies": {
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.9",
+    "autoprefixer": "^10.4.21",
     "eslint": "8.55.0",
     "eslint-config-next": "14.1.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.12",
     "typescript": "5.4.2"
   }
 }
