--- a/package.json
+++ b/package.json
@@ -8,9 +8,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/client": "^7.9.0",
+    "@sanity/icons": "^3.7.4",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^4.5.0",
     "next": "14.1.0",
+    "next-sanity": "^10.0.13",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sanity": "^4.5.0",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@types/node": "^24.1.0",
