--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,3 @@
 {
-  "buildCommand": "npm install --legacy-peer-deps && npm run build",
-  "outputDirectory": "dist",
-  "ignoreCommand": "false"
+  "buildCommand": "npm install --legacy-peer-deps && npm run build"
 }
