--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^4.0.1",
     "@sanity/client": "^7.9.0",
     "@sanity/icons": "^3.7.4",
     "@sanity/image-url": "^1.1.0",
-    "@sanity/vision": "^4.5.0",
-    "next": "14.1.0",
+    "@sanity/ui": "^2.16.12",
+    "@sanity/vision": "^3.99.0",
+    "next": "^14.2.15",
+    "next-sanity": "^9.12.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sanity": "^4.5.0",
+    "sanity": "^3.99.0",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
