--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@sanity/client": "^7.9.0",
     "@sanity/icons": "^3.7.4",
     "@sanity/image-url": "^1.1.0",
+    "@sanity/types": "^3.99.0",
     "@sanity/ui": "^2.16.12",
     "@sanity/vision": "^3.99.0",
     "next": "^14.2.15",
     "next-sanity": "^9.12.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-is": "^18.3.1",
     "sanity": "^3.99.0",
     "styled-components": "^6.1.19"
   },
