--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
-    "@types/node": "^24.1.0",
-    "@types/react": "^19.1.9",
+    "@types/node": "^24.3.0",
+    "@types/react": "^19.1.11",
+    "@types/react-dom": "^19.1.7",
     "eslint": "8.55.0",
     "eslint-config-next": "14.1.0",
-    "typescript": "5.4.2"
+    "typescript": "^5.4.2"
   }
 }
