--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "3000-surgery",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -8,27 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@portabletext/react": "^4.0.1",
-    "@sanity/client": "^7.9.0",
-    "@sanity/icons": "^3.7.4",
-    "@sanity/image-url": "^1.1.0",
-    "@sanity/types": "^3.99.0",
-    "@sanity/ui": "^2.16.12",
-    "@sanity/vision": "^3.99.0",
-    "next": "^14.2.15",
-    "next-sanity": "^9.12.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-is": "^18.3.1",
-    "sanity": "^3.99.0",
-    "styled-components": "^6.1.19"
+    "next": "14.2.32",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+
+    "@portabletext/react": "4.0.1",
+    "next-sanity": "9.12.3",
+    "sanity": "3.99.0",
+    "@sanity/client": "7.9.0",
+    "@sanity/icons": "3.7.4",
+    "@sanity/image-url": "1.1.0",
+    "@sanity/types": "3.99.0",
+    "@sanity/ui": "2.16.12",
+    "@sanity/vision": "3.99.0",
+    "react-is": "18.3.1",
+    "styled-components": "6.1.19",
+
+    "typescript": "5.5.4",
+    "@types/react": "18.2.66",
+    "@types/react-dom": "18.2.19",
+    "@types/node": "20.14.9"
   },
   "devDependencies": {
-    "@types/node": "^24.3.0",
-    "@types/react": "^19.1.11",
-    "@types/react-dom": "^19.1.7",
-    "eslint": "8.55.0",
-    "eslint-config-next": "14.1.0",
-    "typescript": "^5.9.2"
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.32"
   }
 }
