--- a/package.json
+++ b/package.json
@@ -9,26 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.32",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-
-    "@portabletext/react": "4.0.1",
-    "next-sanity": "9.12.3",
-    "sanity": "3.99.0",
+    "@portabletext/react": "^4.0.1",
     "@sanity/client": "7.9.0",
     "@sanity/icons": "3.7.4",
     "@sanity/image-url": "1.1.0",
     "@sanity/types": "3.99.0",
     "@sanity/ui": "2.16.12",
     "@sanity/vision": "3.99.0",
-    "react-is": "18.3.1",
-    "styled-components": "6.1.19",
-
-    "typescript": "5.5.4",
+    "@types/node": "20.14.9",
     "@types/react": "18.2.66",
     "@types/react-dom": "18.2.19",
-    "@types/node": "20.14.9"
+    "next": "14.2.32",
+    "next-sanity": "9.12.3",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-is": "18.3.1",
+    "sanity": "3.99.0",
+    "styled-components": "6.1.19",
+    "typescript": "5.5.4"
   },
   "devDependencies": {
     "eslint": "8.57.0",
